--- a/Jellyfin/Jellyfin.csproj
+++ b/Jellyfin/Jellyfin.csproj
@@ -130,8 +130,7 @@
     </Compile>
     <Compile Include="AppServices.cs" />
     <Compile Include="Controls\DeviceFamilyStateTrigger.cs" />
-    <Compile Include="Core\Central.cs" />
-    <Compile Include="Core\SettingsManager.cs" />
+    <Compile Include="Core\AppSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\AppUtils.cs" />
     <Compile Include="Utils\DeviceFormFactorType.cs" />
