--- a/Jellyfin/Jellyfin.csproj
+++ b/Jellyfin/Jellyfin.csproj
@@ -130,9 +130,9 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="AppServices.cs" />
-    <Compile Include="BindableBase.cs" />
-    <Compile Include="BooleanToVisibilityConverter.cs" />
-    <Compile Include="Core\AppSettings.cs" />
+    <Compile Include="AppSettings.cs" />
+    <Compile Include="Common\BindableBase.cs" />
+    <Compile Include="Common\BooleanToVisibilityConverter.cs" />
     <Compile Include="IsExternalInit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\Home.xaml.cs">
